--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ h2 {
   background-color: #ddd;
   height: 5em;
   width: 6em;
-  margin: 1em;
+  margin-top: 1em;
 }
 
 .date {
@@ -64,4 +64,6 @@ h2 {
   font-size: 1.5em;
 }
 
-/*font-family: 'Audiowide', cursive;*/
+.times {
+  margin-left: 0.5em;
+}
