--- a/main.css
+++ b/main.css
@@ -102,6 +102,10 @@ body {
   margin: 20px 0;
 }
 
+.schedule thead th {
+  text-align: center;
+}
+
 .schedule tr, .schedule th {
   border-bottom: 2px solid #000;
   border-right: 2px solid #000;
